@@ -10,6 +10,13 @@
 	<br/><br/>
 	<span class="text">
 		<ul>
+			<li><span class="bold">On power is stronger than screen off profile</span><br/>
+			Normally the on power profile is stronger than the screen off profile, therefore when 
+			connected to a power source cpu tuner chooses the on power profile regardless if the screen
+			is on or off. <br />
+			Uncheck this setting to honour screen on and off while on power.  This is the legacy setting
+			and mainly used for debugging.
+			</li>
 			<li><span class="bold">Call in Progress Profiles</span><br/>
 			Adds a profile which is applied while the phone is ringing or during a phone call. 
 			</li>
