@@ -9,6 +9,7 @@ V 3.0.0
 - new swipe friendly user interface
 - rework backend and use background process to do the work
 - initalise cpu tuner from (default) configurations 
+- on power is stronger screen locked by default (enable the old sequence in settings) 
 - insert as new: copy and insert an entry 
 - editor close does sanity checks and asks the user or does not save
 - separate statics and profile switch log and update on click
